--- a/company-info.html
+++ b/company-info.html
@@ -35,6 +35,7 @@
          <li><a href="water-quality-tab1.html">수질현황</a></li>
          <li><a href="sub.html">근태관리</a></li>
          <li><a href="diary.html">일정관리</a></li>
+         <li><a href="tasknote.html">업무일지</a></li>
          <li><a href="alert.html">알림함</a></li>
          <li><a href="https://jdwcg.github.io/qbot/">지톡</a></li>
          <li><a href="notice.html">공지사항</a></li>
