--- a/tasknote.html
+++ b/tasknote.html
@@ -59,7 +59,7 @@
         <p>
           08.23(월)
         </p>
-        <i class="bi bi-trash-fill" style="font-size: 1.2rem;"></i>
+        <i class="bi bi-trash-fill" style="font-size: 1.2rem;" onclick="removeCheck();"></i>
       </div>
       <p class="accTxtView">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque provident iure quos mollitia minima, sed pariatur, repudiandae dolores ducimus consectetur odit. Ab, aliquid temporibus debitis commodi error accusamus magnam perspiciatis?
@@ -70,7 +70,7 @@
         <p>
           08.24(화)
         </p>
-        <i class="bi bi-trash-fill" style="font-size: 1.2rem;"></i>
+        <i class="bi bi-trash-fill" style="font-size: 1.2rem;" onclick="removeCheck();"></i>
       </div>
       <p class="accTxtView">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque provident iure quos mollitia minima, sed pariatur, repudiandae dolores ducimus consectetur odit. Ab, aliquid temporibus debitis commodi error accusamus magnam perspiciatis?
@@ -81,7 +81,7 @@
         <p>
           08.25(수)
         </p>
-        <i class="bi bi-trash-fill" style="font-size: 1.2rem;" ></i>
+        <i class="bi bi-trash-fill" style="font-size: 1.2rem;" onclick="removeCheck();"></i>
       </div>
       <p class="accTxtView">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque provident iure quos mollitia minima, sed pariatur, repudiandae dolores ducimus consectetur odit. Ab, aliquid temporibus debitis commodi error accusamus magnam perspiciatis?
@@ -103,14 +103,21 @@
     <button>등록</button>
   </div>
 </div>
-<!-- <style> select {background: #f5f5f5; border: none !important;} </style> -->
 <div id="popupBg" class="popupBg"></div>
 
 
 <script src="assets/script.js"></script>
 <script src="assets/asideMenu.js"></script>
 <script src="assets/popup.js"></script>
-
+<script>
+  function removeCheck() {
+ if (confirm("정말 삭제하시겠습니까??") == true){
+     document.removefrm.submit();
+ }else{
+     return false;
+ }
+}
+</script>
 <style>
 #popBtn {
   background: #6A5ACD;
