--- a/tasknote.html
+++ b/tasknote.html
@@ -96,7 +96,7 @@
   <h1>업무일지를 등록하시겠습니까?</h1>
   <p>입력된 내용은 관리자에게 전달됩니다.</p>
 
-  <h2>업무일자</h2><input type="date">
+  <h2>업무일자</h2><input type="date" style="">
   <textarea name="name" rows="8" cols="80"></textarea>
   <div>
     <button id="closeBtn">취소</button>
@@ -128,7 +128,9 @@
 
 }
 #popup > input {
-  margin-bottom: 1rem; border: 1px solid #ccc; border-radius: 4px
+  margin-bottom: 1rem; border-radius: 4px; border: none;
+  background:#f5f5f5;
+
 }
 /* #6A5ACD */
 </style>
