--- a/diary.html
+++ b/diary.html
@@ -59,8 +59,8 @@
       <tr>
         <td>방문일자</td>
         <td colspan="3">
-          <form name="해당 폼의 이름" action="값을 보낼 주소" method="post">
-                <input type='date' name='userBirthday' value='2021-11-11'/>
+          <form name="" action="" method="post">
+                <input type='date' name='' id='currnetMonth'>
             </form>
         </td>
       </tr>
@@ -382,6 +382,10 @@
  }
 }
 </script>
+<script>
+  document.getElementById('currnetMonth').valueAsDate = new Date();
+</script>
+<style>
 </script>
 
 </body>
