--- a/notice.html
+++ b/notice.html
@@ -97,7 +97,7 @@
 $(function(){
   $('.accTxtView').hide();
   $('.accBar').click(function(){
-    $(this).siblings('.accTxtView').toggle('fast');
+    $(this).siblings('.accTxtView').toggle('normal');
   })
 })
 </script>
