--- a/company-info.html
+++ b/company-info.html
@@ -80,8 +80,7 @@
         <div class="content content1">
           <p>충청남도 당진시 석문면 대호만로 1221-32</p>
           <div class="map">
-
-지도 API 연동
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3187.0377176674283!2d126.57984645121867!3d36.98503287981225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357a553a06d2150d%3A0x6bcea66884635bd8!2z7Lap7LKt64Ko64-EIOuLueynhOyLnCDshJ3rrLjrqbQg64yA7Zi466eM66GcIDEyMjEtMzI!5e0!3m2!1sko!2skr!4v1636979834521!5m2!1sko!2skr" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
         </div>
       </article>
