--- a/tasknote.html
+++ b/tasknote.html
@@ -91,7 +91,7 @@
 </section>
 
 
-<div id="popup" class="popup" style="overflow-y: auto;">
+<div id="popup" class="popup">
   <button id="close"><i class="bi bi-x-lg"></i></button>
   <h1>업무일지를 등록하시겠습니까?</h1>
   <p>입력된 내용은 관리자에게 전달됩니다.</p>
@@ -138,7 +138,6 @@
   background:#f5f5f5;
 
 }
-/* #6A5ACD */
 </style>
 </body>
 </html>
