--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,7 @@
 <body>
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
-      <span class="navTitle">환경설정</span>
+      <span class="navTitle">개인정보 처리방침</span>
       <span>
          <a href="#">
             <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -50,42 +50,16 @@
    <div class="asideBg"></div>
 <div class="height"></div>
 <section class="accWrap">
-
-
+  <div class="accTab">
+    <h2><a href="policy.html">서비스 이용약관</a></h2>
+    <h2 style="background:#fff;"><a href="privacy.html">개인정보처리방침</a></h2>
+  </div>
 <div class="accTxt">
   <div class="accBar">
     <p>
-      푸시알림
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde accusantium, fuga quis eos voluptatibus beatae, at odio voluptate deleniti eligendi corporis ducimus ab cupiditate incidunt tempore ullam numquam, dolores maxime?
     </p>
-    <i class="bi bi-toggle2-off" style="font-size: 2rem;"></i>
-    <i class="bi bi-toggle2-on"  style="font-size: 2rem;"></i>
-  </div>
 </div>
-<div class="accTxt">
-  <div class="accBar">
-    <p>
-      버전 1.0.0
-    </p>
-    <button class="appUpdate">업데이트</button>
-  </div>
-</div>
-<div class="accTxt">
-  <div class="accBar">
-    <p>
-      서비스 이용약관
-    </p>
-    <a href="policy.html"><i class="bi bi-chevron-right"></i></a>
-  </div>
-</div>
-<div class="accTxt">
-  <div class="accBar">
-    <p>
-      개인정보 처리방침
-    </p>
-    <a href="privacy.html"><i class="bi bi-chevron-right"></i></a>
-  </div>
-</div>
-
 </section>
 
 <script src="assets/script.js"></script>
