--- a/policy.html
+++ b/policy.html
@@ -17,7 +17,7 @@
 <body>
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
-      <span class="navTitle">환경설정</span>
+      <span class="navTitle">서비스 이용약관</span>
       <span>
          <a href="#">
             <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -50,41 +50,24 @@
    <div class="asideBg"></div>
 <div class="height"></div>
 <section class="accWrap">
+  <div class="accTab">
+    <h2 style="background:#fff;"><a href="policy.html">서비스 이용약관</a></h2>
+    <h2><a href="privacy.html">개인정보처리방침</a></h2>
+  </div>
+
+<div class="accTxt">
+  <div class="accBar">
+    <p>
+      서비스 이용약관<br>
+      제1장 총칙<br>
+      제1조 목적<br>
+      (약관내용이 표시됨)<br>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam sint nam error veritatis repellat quas quam, illo non commodi sequi fuga aliquam, nobis doloremque! Earum, doloremque, veniam? Reiciendis, veritatis accusamus.
+    </p>
+
+</div>
 
 
-<div class="accTxt">
-  <div class="accBar">
-    <p>
-      푸시알림
-    </p>
-    <i class="bi bi-toggle2-off" style="font-size: 2rem;"></i>
-    <i class="bi bi-toggle2-on"  style="font-size: 2rem;"></i>
-  </div>
-</div>
-<div class="accTxt">
-  <div class="accBar">
-    <p>
-      버전 1.0.0
-    </p>
-    <button class="appUpdate">업데이트</button>
-  </div>
-</div>
-<div class="accTxt">
-  <div class="accBar">
-    <p>
-      서비스 이용약관
-    </p>
-    <a href="policy.html"><i class="bi bi-chevron-right"></i></a>
-  </div>
-</div>
-<div class="accTxt">
-  <div class="accBar">
-    <p>
-      개인정보 처리방침
-    </p>
-    <a href="privacy.html"><i class="bi bi-chevron-right"></i></a>
-  </div>
-</div>
 
 </section>
 
