--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -46,7 +46,7 @@
       </ul>
    </aside>
    <div class="asideBg"></div>
-
+<div class="height"></div>
   <div class="container">
 
 <section class="co-header">
