--- a/diary.html
+++ b/diary.html
@@ -110,6 +110,7 @@
 
 
   <div class="container">
+    <div class="height"></div>
     <section class="co_wrapper">
       <button class="popBtn" id="popBtn">일정 등록</button>
     </section>
