--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </ul>
    </aside>
    <div class="asideBg"></div>
-
+  <div class="height"></div>
   <div class="container">
     <div><img src="assets/imgs/mainbg.png" alt="배경이미지"></div>
     <div class="main">
