--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -50,7 +50,7 @@
       </ul>
    </aside>
    <div class="asideBg"></div>
-
+<div class="height"></div>
 <div class="container">
 
 <section class="co-header">
