--- a/company-info.html
+++ b/company-info.html
@@ -45,7 +45,7 @@
       </ul>
    </aside>
    <div class="asideBg"></div>
-
+<div class="height"></div>
   <div class="container">
 
 <section class="co-header">
