--- a/sub.html
+++ b/sub.html
@@ -11,6 +11,7 @@
   <title>GSK sub</title>
 </head>
 <body>
+
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">근태관리</span>
@@ -27,6 +28,7 @@
 
       </span>
    </header>
+
    <aside class="aside">
       <i class="bi bi-x-lg"></i>
       <ul>
@@ -45,9 +47,12 @@
       </ul>
    </aside>
    <div class="asideBg"></div>
+
+
   <div class="container">
-    <div></div>
+<div class="height"></div>
     <div class="main sub">
+
       <section>
         <p><span>2021.00.00</span>  <span>|</span>  <span>월요일</span></p>
       </section>
