--- a/company.html
+++ b/company.html
@@ -52,6 +52,7 @@
   </script>
 </head>
 <body>
+    <!-- 네이티브 시작 -->
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">업체현황</span>
@@ -85,8 +86,9 @@
       </ul>
    </aside>
    <div class="asideBg"></div>
-
 <div class="height"></div>
+  <!-- 네이티브 끝 -->
+
 
 <div class="container">
   <section class="select">
