--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>GSK main</title>
 </head>
 <body>
+  <!-- 네이티브 시작 -->
    <header>
       <span><a href="index.html"><img src="assets/imgs/nav-logo.png" alt=""></a></span>
       <span>
@@ -44,6 +45,8 @@
    </aside>
    <div class="asideBg"></div>
   <div class="height"></div>
+    <!-- 네이티브 끝 -->
+    
   <div class="container">
     <div><img src="assets/imgs/mainbg.png" alt="배경이미지"></div>
     <div class="main">
