--- a/sub.html
+++ b/sub.html
@@ -11,7 +11,7 @@
   <title>GSK sub</title>
 </head>
 <body>
-
+<!-- 네이티브 start -->
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">근태관리</span>
@@ -47,10 +47,12 @@
       </ul>
    </aside>
    <div class="asideBg"></div>
+<div class="height"></div>
+<!-- 네이티브 End -->
 
 
   <div class="container">
-<div class="height"></div>
+
     <div class="main sub">
 
       <section>
