--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -17,6 +17,7 @@
   </style>
 </head>
 <body>
+  <!-- 네이티브 start -->
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">업체현황 상세</span>
@@ -51,6 +52,9 @@
    </aside>
    <div class="asideBg"></div>
 <div class="height"></div>
+<!-- 네이티브 END -->
+
+
 <div class="container">
 
 <section class="co-header">
