--- a/company-info-tab3-view.html
+++ b/company-info-tab3-view.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+  <!-- 네이티브 start -->
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">업무노트 상세</span>
@@ -46,6 +47,9 @@
       </ul>
    </aside>
    <div class="asideBg"></div>
+   <div class="height"></div>
+<!-- 네이티브 END -->
+
 
 <div class="">
   <div id="" class="update">
