--- a/company-info-tab3.html
+++ b/company-info-tab3.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+  <!-- 네이티브 start -->
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">업체현황 상세</span>
@@ -47,8 +48,8 @@
    </aside>
    <div class="asideBg"></div>
 <div class="height"></div>
+<!-- 네이티브 END -->
   <div class="container">
-
 <section class="co-header">
   <div>
     <h1>와우커뮤니케이션</h1>
