--- a/company-info.html
+++ b/company-info.html
@@ -12,6 +12,7 @@
   <title>GSK main</title>
 </head>
 <body>
+  <!-- 네이티브 시작 -->
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">업체현황 상세</span>
@@ -46,6 +47,8 @@
    </aside>
    <div class="asideBg"></div>
 <div class="height"></div>
+<!-- 네이티브 END -->
+
   <div class="container">
 
 <section class="co-header">
