--- a/diary.html
+++ b/diary.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <!-- 네이티브 start -->
   <header>
     <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
     <span class="navTitle">일정관리</span>
@@ -49,6 +50,9 @@
      </ul>
   </aside>
   <div class="asideBg"></div>
+<div class="height"></div>
+
+<!-- 네이티브 End -->
 
 
   <!-- 팝업 -->
@@ -110,7 +114,6 @@
 
 
   <div class="container">
-    <div class="height"></div>
     <section class="co_wrapper">
       <button class="popBtn" id="popBtn">일정 등록</button>
     </section>
