--- a/privacy.html
+++ b/privacy.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+  <!-- 네이티브 start -->
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">개인정보 처리방침</span>
@@ -49,6 +50,9 @@
    </aside>
    <div class="asideBg"></div>
 <div class="height"></div>
+<!-- 네이티브 End -->
+
+
 <section class="accWrap">
   <div class="accTab">
     <h2><a href="policy.html">서비스 이용약관</a></h2>
