--- a/settings.html
+++ b/settings.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+  <!-- 네이티브 start -->
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">환경설정</span>
@@ -49,9 +50,9 @@
    </aside>
    <div class="asideBg"></div>
 <div class="height"></div>
+<!-- 네이티브 End -->
+
 <section class="accWrap">
-
-
 <div class="accTxt">
   <div class="accBar">
     <p>
