--- a/water-quality-tab2-detail.html
+++ b/water-quality-tab2-detail.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+  <!-- 네이티브 start -->
    <header>
       <a onclick="javascript:history.back();"><i class="bi bi-chevron-left" style="font-size: 1.5rem;"></i></a>
       <span class="navTitle">미생물 테스트 상세</span>
@@ -47,6 +48,8 @@
       </ul>
    </aside>
    <div class="asideBg"></div>
+<div class="height"></div>
+   <!-- 네이티브 End -->
 
 <div class="">
   <div id="" class="update">
