--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -89,9 +89,9 @@
             </div>
           </section>
           <section class="imgAttach">
-            <input type="file">
-            <input type="file">
-            <input type="file">
+            <input type="file" accept="image/png, image/jpeg">
+            <input type="file" accept="image/png, image/jpeg">
+            <input type="file" accept="image/png, image/jpeg">
           </section>
 
           <button>등록</button>
@@ -139,7 +139,6 @@
   <script src="assets/slick/slick.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript">
     $(document).on('ready', function() {
-
       $(".lazy").slick({
         slidesToShow : 1,
         infinite: true,
@@ -150,16 +149,11 @@
     });
 </script>
 
-
   <script src="assets/script.js"></script>
   <!-- <script  src="assets/slide/script.js"></script> -->
   <script src="assets/asideMenu.js"></script>
   <script src="assets/company.js"></script>
   <script src="assets/acc.js"></script>
 
-
-
 </body>
-
-
 </html>
