--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- 네이티브 시작 -->
    <header>
-      <span><a href="index.html"><img src="assets/imgs/nav-logo.png" alt=""></a></span>
+      <span><a href="splash.html"><img src="assets/imgs/nav-logo.png" alt=""></a></span>
       <span>
          <a href="#">
             <svg width="27" height="18" viewBox="0 0 27 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -46,7 +46,7 @@
    <div class="asideBg"></div>
   <div class="height"></div>
     <!-- 네이티브 끝 -->
-    
+
   <div class="container">
     <div><img src="assets/imgs/mainbg.png" alt="배경이미지"></div>
     <div class="main">
