--- a/notice.html
+++ b/notice.html
@@ -59,7 +59,7 @@
         <p>
           Lorem ipsum dolor sit amet
         </p>
-        <i class="bi bi-chevron-down" style="font-size: 1.5rem;"></i>
+        <i class="bi bi-three-dots-vertical"></i>
       </div>
       <span>2021.09.06</span>
       <p class="accTxtView">
@@ -71,7 +71,7 @@
         <p>
           Lorem ipsum dolor sit amet
         </p>
-        <i class="bi bi-chevron-down" style="font-size: 1.5rem;"></i>
+        <i class="bi bi-three-dots-vertical"></i>
       </div>
       <span>2021.09.06</span>
       <p class="accTxtView">
@@ -83,7 +83,7 @@
         <p>
           Lorem ipsum dolor sit amet
         </p>
-        <i class="bi bi-chevron-down" style="font-size: 1.5rem;"></i>
+        <i class="bi bi-three-dots-vertical"></i>
       </div>
       <span>2021.09.06</span>
       <p class="accTxtView">
