--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <div class="wrapper">
+  <div class="logo"><img src="assets/imgs/nav-logo.png" alt="img" style="margin-top: 1rem;"></div>
    <h1>Maintenance<br>Solution<br>Provider<br>
-     <img src="assets/imgs/nav-logo.png" alt="img" style="margin-top: 1rem;">
 </h1>
    <input type="text" placeholder="아이디">
    <input type="text" placeholder="비밀번호">
@@ -53,7 +53,7 @@ input {
    width: 100%;
 }
 input::placeholder {color: #aaa; font-weight: 400;}
-input:nth-child(4) {
+input:nth-child(5) {
    background: #FF6464; color: #fff;cursor: pointer;
 }
 input[type="submit"] {font-weight: 600; transition: .5s;}
@@ -86,7 +86,11 @@ input[type="submit"]:hover {
       font-weight: 300;
     }
 
-
+.logo {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 1rem;
+}
 </style>
 </body>
 </html>
