--- a/company-info-tab2.html
+++ b/company-info-tab2.html
@@ -122,9 +122,9 @@
             </div>
           </section>
           <section class="imgAttach">
-            <input type="file">
-            <input type="file">
-            <input type="file">
+            <input type="file" accept="image/png, image/jpeg">
+            <input type="file" accept="image/png, image/jpeg">
+            <input type="file" accept="image/png, image/jpeg">
           </section>
           <button>등록</button>
 
