--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
       </section>
     </div>
   </div>
+<aside class="chatbot">
 
+  <a href="https://jdwcg.github.io/qbot/"><img src="assets/imgs/bot.png" alt=""></a>
+</aside>
   <script src="assets/script.js"></script>
 </body>
 </html>
