--- a/password-confirm.html
+++ b/password-confirm.html
@@ -13,12 +13,9 @@
 <body>
 <div class="wrapper">
   <div class="logo"><img src="assets/imgs/nav-logo.png" alt="img" style="margin-top: 1rem;"></div>
-   <h1>비밀번호 변경<br>
+   <h1>비밀번호가 정상적으로<br>변경되었습니다.<br>
 </h1>
-   <input type="password" placeholder="기존 비밀번호" id="password">
-   <input type="password" placeholder="새 비밀번호">
-   <input type="password" placeholder="새 비밀번호 확인">
-   <input type="submit" value="변경" onclick="location.href='password-confirm.html'">
+   <input type="submit" value="로그인하러 가기" onclick="location.href='login.html'">
    <div class="autoSave">
 </div>
 
@@ -45,7 +42,7 @@ input {
    width: 100%;
 }
 input::placeholder {color: #aaa; font-weight: 400;}
-input:nth-child(6) {
+input:nth-child(3) {
    background: #FF6464; color: #fff;cursor: pointer;
 }
 input[type="submit"] {font-weight: 600; transition: .5s;}
