--- a/password.html
+++ b/password.html
@@ -19,9 +19,43 @@
    <input type="password" placeholder="새 비밀번호">
    <input type="password" placeholder="새 비밀번호 확인">
    <input type="submit" value="변경" onclick="location.href='password-confirm.html'">
+
+   <input type="submit" value="경고창" onclick="removeCheck1();">
+   <input type="submit" value="경고창" onclick="removeCheck2();">
+   <input type="submit" value="경고창" onclick="removeCheck3();">
+   <input type="submit" value="경고창" onclick="removeCheck4();">
    <div class="autoSave">
 </div>
-
+<script type="text/javascript">
+  function removeCheck1() {
+ if (confirm("기존 비밀번호가 일치 하지 않습니다. 다시 입력해주세요.") == true){
+     document.removefrm.submit();
+ }else{
+     return false;
+ }
+}
+  function removeCheck2() {
+ if (confirm("비밀번호는 6~12 영문,숫자,특수문자 조합으로 입력해야 합니다.") == true){
+     document.removefrm.submit();
+ }else{
+     return false;
+ }
+}
+  function removeCheck3() {
+ if (confirm("새 비밀번호와 새 비밀번호 확인이 일치 하지 않습니다. 다시 입력해 주세요.") == true){
+     document.removefrm.submit();
+ }else{
+     return false;
+ }
+}
+  function removeCheck4() {
+ if (confirm("기존 비밀번호와 동일한 비밀번호를 입력하였습니다. 새 비밀번호를 다시 입력해 주세요.") == true){
+     document.removefrm.submit();
+ }else{
+     return false;
+ }
+}
+</script>
 
 <style>
 body {
