--- a/notice.html
+++ b/notice.html
@@ -44,8 +44,8 @@
          <li><a href="https://jdwcg.github.io/qbot/">지톡</a></li>
          <li><a href="notice.html">공지사항</a></li>
          <li><a href="settings.html">환경설정</a></li>
-         <li><a href="login.html">비밀번호 변경</a></li>
-         <li><a href="login.html">로그아웃</a></li>
+         <li><a href="password.html">비밀번호 변경</a></li>
+         <li><a href="login.html">로그인</a></li>
       </ul>
    </aside>
    <div class="asideBg"></div>
