--- a/water-quality-tab2.html
+++ b/water-quality-tab2.html
@@ -88,13 +88,13 @@
           <td>1</td><td>2021.09.06</td><td>1.5</td>
         </tr>
         <tr onClick = " location.href='water-quality-tab2-detail.html' " >
-          <td>2</td><td>2021.09.06</td><td>1.5</td>
+          <td>2</td><td>탭하면 상세 이동</td><td>1.5</td>
         </tr>
         <tr onClick = " location.href='water-quality-tab2-detail.html' " >
-          <td>3</td><td>2021.09.06</td><td>1.5</td>
+          <td>3</td><td>탭하면 상세 이동</td><td>1.5</td>
         </tr>
         <tr onClick = " location.href='water-quality-tab2-detail.html' " >
-          <td>4</td><td>2021.09.06</td><td>1.5</td>
+          <td>4</td><td>탭하면 상세 이동</td><td>1.5</td>
         </tr>
         <tr onClick = " location.href='water-quality-tab2-detail.html' " >
           <td>5</td><td>2021.09.06</td><td>1.5</td>
