--- a/company.html
+++ b/company.html
@@ -130,7 +130,7 @@
              <article>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프</article>
           </section>
           <section>
-            <button>수질분석보고서 보기</button>
+            <button onclick="location.href='https://jdwcg.github.io/gsk/water-quality-tab1.html'">수질분석보고서 보기</button>
           </section>
         </div>
       </article>
@@ -163,7 +163,7 @@
              <article>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프</article>
           </section>
           <section>
-            <button>수질분석보고서 보기</button>
+            <button onclick="location.href='https://jdwcg.github.io/gsk/water-quality-tab1.html'">수질분석보고서 보기</button>
           </section>
         </div>
       </article>
@@ -196,7 +196,7 @@
              <article>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프<br>R.O 그래프</article>
           </section>
           <section>
-            <button>수질분석보고서 보기</button>
+            <button onclick="location.href='https://jdwcg.github.io/gsk/water-quality-tab1.html'">수질분석보고서 보기</button>
           </section>
         </div>
       </article>
